# Questionnaire_Builder_React

./: .gitignore  AGENTS.md  README.md  TODO.md  eslint.config.js  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json
.github/instructions/: planning.instructions.md  survey-json.instructions.md  surveyjs.instructions.md  ui-primitives.instructions.md
Backend/: .env  .env.example  .envrc  docker-compose.yml  main.py  pyproject.toml
Backend/config/: settings.py  urls.py
Backend/questionnaires/: admin.py  models.py  pdf.py  serializers.py  urls.py  views.py
Backend/questionnaires/management/commands/: recreate_superuser.py
Backend/questionnaires/migrations/: 0001_initial.py  0002_owner_nullable.py  0003_add_questionnaire_response.py  0004_remove_questions_field.py  0005_rename_questionnaire_to_type.py  0006_rename_response_to_questionnaire.py  0007_questionnaire_add_fields.py  0008_alter_questionnaire_options_and_more.py  0009_questionnaire_survey_json_snapshot.py  0010_backfill_survey_json_snapshot.py  0011_questionnaire_metrics.py  0012_backfill_metrics.py
Backend/questionnaires/templates/questionnaires/: response_pdf.html
Backend/questionnaires/tests/: conftest.py  test_models.py  test_pdf.py  test_serializers.py  test_views.py
Backend/responses/: models.py  serializers.py  views.py
Backend/responses/migrations/: 0001_initial.py
Backend/scripts/: test_weasyprint.py
Docs/: GUIDE_BRAND_DESIGN.md
Docs/Completed/: PLAN.md  (+15 more)
Frontend/: .env  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
(+96 files in other folders)
